--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-/* @font-face {
+@font-face {
     font-family: 'Noto Sans CJK KR';
     font-style: normal;
     font-weight: 100;
@@ -33,4 +33,4 @@
     src: url("./styles/fonts/NotoSansKR-Bold.woff2") format('woff2'),
     url("./styles/fonts/NotoSansKR-Bold.woff") format('woff'),
     url("./styles/fonts/NotoSansKR-Bold.otf") format('truetype')
-  } */
+  }
